--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -584,6 +584,26 @@ a:hover {
   display: block;
   margin: auto;
 }
+.index-button {
+  padding: 0px 16px;
+  border: none;
+  border-radius: 36px;
+  font-size: 36px;
+  font-weight: 700;
+  background-color: white;
+  color: black;
+  background-size: 200%;
+  transition: 0.5s;
+  mix-blend-mode: screen;
+}
+.index-button:hover {
+  background-color: white;
+  box-shadow: 0 0 5px #fff, 0 0 12px #fff, 0 0 25px #fff,
+    0 0 50px #fff;
+}
+.index-button:focus {
+  outline: none;
+}
 .main-content h1 {
   font-size:2.5em;
   margin-bottom:4px;
