--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -764,8 +764,7 @@ a:hover {
 }
 .site-footer {
   padding-top:2rem;
-  margin-top:2rem;
-  border-top:solid 1px #eff0f1
+  border-top:solid 1px #eff0f1;
 }
 @media screen and (min-width: 64em) {
   .site-footer {
