--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -587,7 +587,7 @@ a:hover {
 .index-button {
   padding: 0px 16px;
   display: block;
-  width: 20%;
+  width: 166px;
   margin: auto;
   border: none;
   border-radius: 36px;
