--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,9 @@
     <main id="content" class="main-content">
       {{ content }}
       <footer class="site-footer">
-        <span class="site-footer-credits">Open PS2 Loader Guide - <a href="#">Gledson999</a>.</span>
+        <span class="site-footer-credits">Guia Oficial do Open PS2 Loader - <a href="./index.html">Gledson999</a>.</span>
+        <span class="site-footer-credits">Todo o conteúdo é protegido por direitos autorais sob a licença Creative Commons.</span>
+        <span class="site-footer-credits">Agradecimentos especiais a EL_Patas & ShaolinAssassins pelos seus grandiosos materiais.</span>
       </footer>
     </main>
   </body>
